src/app/globals.css
/* ... */
.h5 {
  @apply text-[17px] md:text-[19px] font-semibold tracking-[0.85px] md:tracking-[0.95px];
}

.glob_icons {
  @apply shrink-0;
}

/* NavBar */
.navBar {
  @apply sticky top-0 z-50 flex items-center justify-between px-[20px] md:px-[70px] lg:px-[100px] py-[20px] transition-all ease-in-out duration-500;
}

.navBar.active {
  @apply shadow-[0px_1px_0px_0.5px_rgba(31,218,83,0.25)] backdrop-blur-md;
}

.navBar .navLink_container {
  @apply hidden lg:flex gap-[30px];
}

.navLink {
  @apply flex flex-col items-center relative px-[16px] py-[8px];
}

.navLink .text {
  @apply transition-all ease-in duration-500;
}

.navLink:hover .text {
  @apply drop-shadow-[-2px_0_4px_#1FDA53] transition-all ease-in duration-500;
}

.navLink .text.active {
  @apply drop-shadow-[-2px_0_4px_#1FDA53];
}

.navLink .line {
  @apply absolute bottom-0 bg-primary w-[0px] h-[2px] transition-all ease-in duration-500;
}

.navLink .line.active {
  @apply absolute bottom-0 bg-primary w-[45%] h-[2px] transition-all ease-in duration-500;
}

.logo g :not(#foreground) {
  @apply invisible opacity-0 transition-all ease-in duration-1000;
}

.logo.active g :not(#foreground) {
  @apply visible opacity-100 transition-all ease-in duration-1000;
}

.navBar .socials_container {
  @apply hidden lg:flex gap-[30px] pl-[130px];
}

.linkedin_info_container,
.github_info_container {
  @apply relative flex flex-col;
}

.linkedin_info_container .linkedin_icon {
  @apply transition-all ease-in duration-500;
}

.linkedin_info_container.active .linkedin_icon {
  @apply drop-shadow-[0_0_6px_#59ED82] transition-all ease-in duration-500;
}

.linkedin_info_container .linkedin_icon #foreground {
  @apply fill-secondary transition-all ease-in duration-500;
}

.linkedin_info_container.active .linkedin_icon #foreground {
  @apply fill-primary transition-all ease-in duration-500;
}

.github_info_container .github_icon {
  @apply transition-all ease-in duration-500;
}

.github_info_container.active .github_icon {
  @apply drop-shadow-[0_0_6px_#59ED82] transition-all ease-in duration-500;
}

.github_info_container .github_icon #foreground {
  @apply fill-secondary transition-all ease-in duration-500;
}

.github_info_container.active .github_icon #foreground {
  @apply fill-primary transition-all ease-in duration-500;
}

.menu_icon {
  @apply flex lg:hidden cursor-pointer;
}

.menu_icon:hover path {
  @apply fill-primary-light transition-all ease-in duration-500;
}

/* Nav Menu */
.navMenu_container {
  @apply invisible opacity-0 flex justify-end lg:hidden fixed w-screen h-screen backdrop-blur-md z-[100] transition-all ease-in duration-500;
}

.navMenu_container.active {
  @apply visible opacity-100 transition-all ease-in duration-500;
}

.navMenu {
  @apply translate-x-[414px] flex flex-col gap-[20px] w-screen sm:w-[414px] h-full px-[20px] md:px-[70px] pt-[20px] pb-[50px] bg-background-alt transition-all ease-in duration-500;
}

.navMenu.active {
  @apply translate-x-0 transition-all ease-in duration-500;
}

.navMenu .top_container {
  @apply flex justify-end;
}

.navMenu .navLink_container {
  @apply flex flex-col items-center gap-[30px] py-[20px];
}

.navMenu .socials_container {
  @apply flex justify-center gap-[30px] mt-auto;
}

.close_icon {
  @apply cursor-pointer;
}

.close_icon:hover path {
  @apply fill-primary-light transition-all ease-in duration-500;
}

/* Home Page */
.home {
  @apply flex items-center justify-center min-[850px]:justify-end px-[20px] md:px-[70px] lg:px-[100px] py-[70px];
}

/* Intro */
.intro_container {
  @apply px-[30px] md:px-[70px] py-[30px] md:py-[50px] w-[390px] md:w-[646px] rounded-[15px] md:rounded-[25px] bg-background-alt shadow-[0px_0px_40px_0_rgba(31,218,83,0.25)] md:shadow-[-30px_-30px_30px_0_rgba(31,218,83,0.25)];
}

.intro {
  @apply invisible fixed opacity-0 flex flex-col items-start gap-[14px];
}

.intro.active {
  @apply visible static opacity-100 transition-all ease-in duration-1000;
}

.intro .details_container {
  @apply flex flex-col gap-[30px];
}

.intro .details_container .heading_container {
  @apply flex flex-col gap-[7px];
}

.titleCard_container {
  @apply flex flex-wrap gap-[10px];
}

.titleCard {
  @apply px-[12px] py-[6px] bg-primary-light rounded-[7px] text-background-main text-[13px] tracking-[0.65px];
}

.intro .details_container .desc {
  @apply text-pretty whitespace-pre-wrap;
}

.intro_container .cta_container {
  @apply flex gap-[24px] flex-col min-[406px]:flex-row;
}

.main_btn {
  @apply flex items-center gap-[5px] px-[16px] py-[7px] rounded-[10px] bg-primary text-background-main hover:bg-primary-light transition-all ease-in duration-500;
}

.alt_btn {
  @apply flex items-center gap-[5px] px-[16px] py-[7px] rounded-[10px] border-primary border-[1px] text-primary hover:bg-background-main transition-all ease-in duration-500;
}

#view_btn,
#contact_btn,
#back_btn {
  @apply w-full min-[406px]:w-fit justify-center;
}

#view_btn img {
  @apply transition-all ease-in duration-500;
}

#view_btn:hover img {
  @apply translate-x-[2px] translate-y-[-2px] transition-all ease-in duration-300;
}

#contact_btn img {
  @apply transition-all ease-in duration-500;
}

#contact_btn:hover img {
  @apply translate-x-[3px] transition-all ease-in duration-300;
}

/* Contact Me */
.getInTouch {
  @apply invisible fixed opacity-0 flex flex-col items-start gap-[30px];
}

.getInTouch.active {
  @apply visible static opacity-100 transition-all ease-in duration-1000;
}

.getInTouch .heading_container {
  @apply flex items-center gap-7;
}

.getInTouch .heading_container .mail_icon_container {
  @apply flex justify-center items-center px-2 py-1 rounded-full bg-background-alt transition-all ease-in duration-500;
}

.getInTouch .heading_container .mail_icon_container.active {
  @apply drop-shadow-[0_0_6px_#59ED82] transition-all ease-in duration-500;
}

.getInTouch .heading_container .mail_icon_container.active i {
  @apply text-primary transition-all ease-in duration-500;
}
/* ... */

